--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab_list">
        <attribute name="title">
@@ -46,55 +46,104 @@
             <enum>Qt::Horizontal</enum>
            </property>
            <widget class="QLabel" name="label_start_utl">
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>40</height>
+             </size>
+            </property>
             <property name="text">
              <string>Start url</string>
             </property>
            </widget>
-           <widget class="QLineEdit" name="lineEdit_url"/>
+           <widget class="QLineEdit" name="lineEdit_url">
+            <property name="enabled">
+             <bool>true</bool>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>40</height>
+             </size>
+            </property>
+           </widget>
           </widget>
           <widget class="QSplitter" name="splitter">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
            <widget class="QLabel" name="label_scan_threads">
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>40</height>
+             </size>
+            </property>
             <property name="text">
              <string>Scan threads</string>
             </property>
            </widget>
-           <widget class="QSpinBox" name="spinBox_number_scan_theads"/>
-           <widget class="QLabel" name="label_download_threads">
-            <property name="text">
-             <string>Download threads</string>
+           <widget class="QSpinBox" name="spinBox_number_scan_theads">
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>40</height>
+             </size>
             </property>
            </widget>
-           <widget class="QSpinBox" name="spinBox_number_dewnload_threads"/>
            <widget class="QLabel" name="label_max_url">
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>40</height>
+             </size>
+            </property>
             <property name="text">
              <string>Max url</string>
             </property>
            </widget>
-           <widget class="QSpinBox" name="spinBox_max_url"/>
+           <widget class="QSpinBox" name="spinBox_max_url">
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>40</height>
+             </size>
+            </property>
+           </widget>
           </widget>
           <widget class="QSplitter" name="splitter_4">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
            <widget class="QPushButton" name="pushButton_pause">
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>40</height>
+             </size>
+            </property>
             <property name="text">
              <string>Pause</string>
             </property>
            </widget>
            <widget class="QPushButton" name="pushButton_stop">
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>40</height>
+             </size>
+            </property>
             <property name="text">
              <string>Stop</string>
             </property>
            </widget>
-           <widget class="QProgressBar" name="progress_bar">
-            <property name="value">
-             <number>24</number>
-            </property>
-           </widget>
            <widget class="QPushButton" name="pushButton_start">
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>40</height>
+             </size>
+            </property>
             <property name="text">
              <string>Start</string>
             </property>
@@ -104,9 +153,9 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="tab_processing_output">
+      <widget class="QWidget" name="tab_find_coincidence">
        <attribute name="title">
-        <string>Processing output</string>
+        <string>Find coincidence</string>
        </attribute>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
@@ -114,86 +163,18 @@
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
-          <widget class="QTextBrowser" name="textBrowser"/>
-          <widget class="QScrollBar" name="verticalScrollBar">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-          </widget>
+          <widget class="QTextBrowser" name="textBrowser_find"/>
          </widget>
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="tab_editor">
+      <widget class="QWidget" name="tab_log">
        <attribute name="title">
-        <string>Editor</string>
+        <string>Log</string>
        </attribute>
        <layout class="QHBoxLayout" name="horizontalLayout_8">
         <item>
-         <layout class="QVBoxLayout" name="verticalLayout_3">
-          <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_7">
-            <item>
-             <widget class="QLabel" name="label_2">
-              <property name="text">
-               <string>File name</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLineEdit" name="address"/>
-            </item>
-            <item>
-             <widget class="QPushButton" name="editor_open">
-              <property name="text">
-               <string>Open</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <widget class="QPlainTextEdit" name="plainTextEdit"/>
-          </item>
-          <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_6">
-            <item>
-             <widget class="QPushButton" name="pushButton_editor_add">
-              <property name="text">
-               <string>Add</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer name="horizontalSpacer_2">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item>
-             <widget class="QPushButton" name="pushButton_editor_save">
-              <property name="text">
-               <string>Save</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QPushButton" name="pushButton_editor_clear">
-              <property name="text">
-               <string>Clear</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-         </layout>
+         <widget class="QTextBrowser" name="textBrowser_log"/>
         </item>
        </layout>
       </widget>
@@ -215,14 +196,6 @@
      <string>File</string>
     </property>
     <addaction name="actionNew"/>
-    <addaction name="actionOpen"/>
-    <addaction name="separator"/>
-    <addaction name="actionSave"/>
-    <addaction name="actionSave_as"/>
-    <addaction name="separator"/>
-    <addaction name="actionImport_modeling"/>
-    <addaction name="actionExport_Modeling"/>
-    <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
@@ -235,17 +208,6 @@
     <property name="title">
      <string>View</string>
     </property>
-   </widget>
-   <widget class="QMenu" name="menuServer">
-    <property name="title">
-     <string>Server</string>
-    </property>
-    <addaction name="actionConnect"/>
-    <addaction name="actionDisconnect"/>
-    <addaction name="separator"/>
-    <addaction name="actionEcho"/>
-    <addaction name="actionClear_history"/>
-    <addaction name="separator"/>
    </widget>
    <widget class="QMenu" name="menuWindow">
     <property name="title">
@@ -260,19 +222,9 @@
     <addaction name="actionLicence"/>
     <addaction name="actionHelp"/>
    </widget>
-   <widget class="QMenu" name="menuEditor">
-    <property name="title">
-     <string>Editor</string>
-    </property>
-    <addaction name="action_Editor_New"/>
-    <addaction name="action_Editor_Open"/>
-    <addaction name="separator"/>
-   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
    <addaction name="menuView"/>
-   <addaction name="menuServer"/>
-   <addaction name="menuEditor"/>
    <addaction name="menuWindow"/>
    <addaction name="menuHelp"/>
   </widget>
@@ -372,8 +324,33 @@
     <string>Clear history</string>
    </property>
   </action>
+  <action name="actionFull_screen">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Full screen</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>actionExit</sender>
+   <signal>activated()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>265</x>
+     <y>175</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
